try fix svgs not shown on mobile

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 }
 .main2 {
+  overflow:hidden;
   max-height: 35vh;
   max-width: 100vw;
   display: grid;
@@ -73,8 +74,14 @@ svg:hover{
 }
 
 @media (max-width:768px){
-
+  .social-icon svg {
+    width: 1rem;
+    height: 1rem;
+  }
 }
 @media (max-width:480px){
-
+  .social-icon svg {
+    width: 1rem;
+    height: 1rem;
+  }
 }
